--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             <div class="txt-wrap">
                                 <div class="txt">
                                     <h2>VICCARBE</h2>
-                                    <p>스페인의 지중해 도시 발렌시아에 위치한 현대적인 디자인 가구 브랜드 홈페이지</p>
+                                    <p>스페인의 지중해 도시 발렌시아에 위치한 <br><br> 현대적인 디자인 가구 브랜드 홈페이지</p>
                                     <div class="btn-wrap"><a href="#"><i>ABOUT WORK</i></a></div>
                                 </div>
                             </div>
@@ -174,7 +174,7 @@
                             <div class="txt-wrap s356">
                                 <div class="txt">
                                     <h2>JASON <br> TRAVEL SERVICE</h2>
-                                    <p>단 하나뿐인 나만의 럭셔리 여행, "다른 여행"을 추구하는 국내 여행사 홈페이지</p>
+                                    <p>단 하나뿐인 나만의 럭셔리 여행, <br><br> "다른 여행"을 추구하는 국내 여행사 홈페이지</p>
                                     <div class="btn-wrap"><a href="#"><i>ABOUT WORK</i></a></div>
                                 </div>
                             </div>
@@ -264,7 +264,7 @@
                             <div class="txt-wrap s356">
                                 <div class="txt">
                                     <h2>VIVIENNE <br> WESTWOOD</h2>
-                                    <p>영국의 패션 브랜드 비비안웨스트우드 공식 온라인 스토어 홈페이지</p>
+                                    <p>영국의 패션 브랜드 비비안웨스트우드 <br><br> 공식 온라인 스토어 홈페이지</p>
                                     <div class="btn-wrap"><a href="#"><i>ABOUT WORK</i></a></div>
                                 </div>
                             </div>
