--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <!-- 오픈 아이콘 -->
     <!-- <script src='https://kit.fontawesome.com/a076d05399.js'></script> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+
 
 
 
@@ -93,9 +95,9 @@
                 <div class="container">
                     <ul>
                         <li><a href="#intro" class="main-btn">HOME</a></li>
-                        <li><a href="./main2.php" class="main-btn">ABOUT</a></li>
-                        <li><a href="./main3.php" class="main-btn">SKILLS</a></li>
-                        <li><a href="#section2" class="main-btn">PORTFOLIO</a></li>
+                        <li><a href="#section2" class="main-btn">ABOUT</a></li>
+                        <li><a href="#section3" class="main-btn">SKILLS</a></li>
+                        <li><a href="#section4" class="main-btn">PORTFOLIO</a></li>
                         <li><a href="#footer" class="main-btn">CONTACT</a></li>
                     </ul>
                 </div>
@@ -123,14 +125,226 @@
                                     </div>
                                 </div>
                             </div>
-
-                            <span class="smooth-wrap"><a href="#section2" class="smooth-btn"><i class="fa fa-angle-double-down"></i></a></span>
+                            <span class="smooth-wrap"><a href="#section2" class="smooth-btn"><i class="fas fa-angle-double-down"></i></a></span>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section id="section2" class="portfolio wheelE">
+        <section id="section2" class="sec2 wheelE">
+            <div class="wrap">
+                <div class="gap">
+                    <div class="container">
+                        <div class="title1">
+                            <h2>ABOUT</h2>
+                        </div>
+                        <div class="content clearfix">
+                            <div class="left">
+                                <div class="content-gap">
+                                    <div class="img-wrap"><img src="./img/2portfolio.jpg" alt=""></div>
+                                    <ul class="pro-wrap">
+                                        <li><div><i class="fas fa-birthday-cake"></i><h6>1984.08.26</h6></div></li>
+                                        <li><div><i class="fas fa-phone-alt"></i><h6>+82. 10. 4583. 8408</h6></div></li>
+                                        <li><div><i class="fas fa-envelope"></i><h6>nizi_aki@naver.com</h6></div></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="right">
+                                <div class="content-gap">
+                                    <div class="education">
+                                        <h4>EDUCATION</h4>
+                                        <ul class="edu-wrap">
+                                            <li>
+                                                <span>2021.02 ~ 2021.03</span>
+                                                <span>더조은 컴퓨터 아카데미</span>
+                                                <span>프론트엔드 개발자(Vue.js) 수료</span>
+                                            </li>
+                                            <li>
+                                                <span>2020.09 ~ 2021.01</span>
+                                                <span>더조은 컴퓨터 아카데미</span>
+                                                <span>UI/UX 웹디자인 실무자 양성과정(웹퍼블리셔, 프론트엔드)(혼합훈련) 수료</span>
+                                            </li>
+                                            <li>
+                                                <span>2000.03 ~ 2003.02</span>
+                                                <span>계성여자고등학교 입학/졸업</span>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="experience">
+                                        <h4>WORK EXPERIENCE</h4>
+                                        <ul class="edu-wrap">
+                                            <li>
+                                                <span>2015.06 ~ 2019.04</span>
+                                                <span>아이오페 플래그십 스토어 / 아리따움 - 매니저</span>
+                                            </li>
+                                            <li>
+                                                <span>2009.01 ~ 2015.06</span>
+                                                <span>미샤 - 매니저</span>
+                                            </li>
+                                            <li>
+                                                <span>2006.04 ~ 2008.12</span>
+                                                <span>미샤 - 직원/부매니저</span>
+                                            </li>
+                                            <li>
+                                                <span>2005.02 ~ 2005.12</span>
+                                                <span>월드앤코리아 여행사 - 직원</span>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="section2-1" class="sec2 wheelE">
+            <div class="wrap">
+                <div class="gap">
+                    <div class="container">
+                        <div class="title1">
+                            <h2>LOGO DESIGN</h2>
+                        </div>
+                        <div class="content clearfix">
+                            <div class="left">
+                                <h4>로고 / LOGO</h4>
+                                <div class="img-wrap"><img src="./img/logo.png" alt="logo"></div>
+                            </div>
+                            <div class="right">
+                                <div class="up">
+                                    <h4>컨셉 / CONCEPT</h4>
+                                    <h5>A + 아 + 영(0)</h5>
+                                    <p>
+                                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                                        Assumenda optio perferendis incidunt possimus! Harum neque quia recusandae,
+                                        optio officiis, architecto illum repudiandae reiciendis libero cum similique.
+                                        Eius odit provident dignissimos!
+                                    </p>
+                                </div>
+                                <div class="down">
+                                    <h4>컬러 / COLOR</h4>
+                                    <div class="color-wrap">
+                                        <i class="color1"></i><span>RGB&nbsp; 245 223 &nbsp;77 <br> HEX/HTML F5DF4D</span>
+                                        <i class="color2"></i><span>RGB&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 0 106 107 <br> HEX/HTML 006A6B</span>
+                                        <i class="color3"></i><span>RGB&nbsp;&nbsp; 84 202 202 <br> HEX/HTML 54CACA</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="section3" class="wheelE">
+            <div class="wrap">
+                <div class="gap">
+                    <div class="title1">
+                        <h2>SKILLS</h2>
+                    </div>
+                    <div class="content">
+                        <ul class="content-wrap clearfix">
+                            <li>
+                                <div class="gap2">
+                                    <div class="box-wrap">
+                                        <svg class="bg" viewBox="0 0 400 400">
+                                            <circle cx="200" cy="200" r="190" fill="none" stroke="#e44d26" stroke-width="20">
+                                        </svg>
+                                        <svg class="front" viewBox="0 0 400 400">
+                                            <circle class="circle" cx="200" cy="200" r="190" fill="none" stroke-width="20">
+                                        </svg>
+                                        <div class="name">
+                                            <span><img src="./img/html5.png" alt="html5"></span>
+                                            <h3>100%</h3>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="gap2">
+                                    <div class="box-wrap">
+                                        <svg class="bg" viewBox="0 0 400 400">
+                                            <circle cx="200" cy="200" r="190" fill="none" stroke="#264de4" stroke-width="20">
+                                        </svg>
+                                        <svg class="front" viewBox="0 0 400 400">
+                                            <circle class="circle" cx="200" cy="200" r="190" fill="none" stroke-width="20">
+                                        </svg>
+                                        <div class="name">
+                                            <span><img src="./img/css3.png" alt="css3"></span>
+                                            <h3>100%</h3>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="gap2">
+                                    <div class="box-wrap">
+                                        <svg class="bg" viewBox="0 0 400 400">
+                                            <circle cx="200" cy="200" r="190" fill="none" stroke="#f7df1e" stroke-width="20">
+                                        </svg>
+                                        <svg class="front" viewBox="0 0 400 400">
+                                            <circle class="circle" cx="200" cy="200" r="190" fill="none" stroke-width="20">
+                                        </svg>
+                                        <div class="name">
+                                            <span><img src="./img/JavaScript.png" alt="JavaScript"></span>
+                                            <h3>100%</h3>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="gap2">
+                                    <div class="box-wrap">
+                                        <svg class="bg" viewBox="0 0 400 400">
+                                            <circle cx="200" cy="200" r="190" fill="none" stroke="#0868ab" stroke-width="20">
+                                        </svg>
+                                        <svg class="front" viewBox="0 0 400 400">
+                                            <circle class="circle" cx="200" cy="200" r="190" fill="none" stroke-width="20">
+                                        </svg>
+                                        <div class="name">
+                                            <span><img src="./img/jQuery.png" alt="jQuery"></span>
+                                            <h3>100%</h3>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="gap2">
+                                    <div class="box-wrap">
+                                        <svg class="bg" viewBox="0 0 400 400">
+                                            <circle cx="200" cy="200" r="190" fill="none" stroke="#62ccf1" stroke-width="20">
+                                        </svg>
+                                        <svg class="front" viewBox="0 0 400 400">
+                                            <circle class="circle" cx="200" cy="200" r="190" fill="none" stroke-width="20">
+                                        </svg>
+                                        <div class="name">
+                                            <span><img src="./img/photoshop.png" alt="photoshop"></span>
+                                            <h3>100%</h3>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="gap2">
+                                    <div class="box-wrap">
+                                        <svg class="bg" viewBox="0 0 400 400">
+                                            <circle cx="200" cy="200" r="190" fill="none" stroke="#f57f2a" stroke-width="20">
+                                        </svg>
+                                        <svg class="front" viewBox="0 0 400 400">
+                                            <circle class="circle" cx="200" cy="200" r="190" fill="none" stroke-width="20">
+                                        </svg>
+                                        <div class="name">
+                                            <span><img src="./img/illustration.png" alt="illustration"></span>
+                                            <h3>100%</h3>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="section4" class="portfolio wheelE">
             <div class="wrap">
                 <div class="gap">
                     <div class="container clearfix">
@@ -160,7 +374,7 @@
                 </div>
             </div>
         </section>
-        <section id="section3" class="portfolio wheelE">
+        <section id="section5" class="portfolio wheelE">
             <div class="wrap">
                 <div class="gap">
                     <div class="container clearfix">
@@ -171,7 +385,7 @@
                                     <h3>RESPONSIVE WEBSITE</h3>
                                 </div>
                             </div>
-                            <div class="txt-wrap s356">
+                            <div class="txt-wrap s578">
                                 <div class="txt">
                                     <h2>JASON <br> TRAVEL SERVICE</h2>
                                     <p>단 하나뿐인 나만의 럭셔리 여행, <br><br> "다른 여행"을 추구하는 국내 여행사 홈페이지</p>
@@ -190,7 +404,7 @@
                 </div>
             </div>
         </section>
-        <section id="section4" class="portfolio wheelE">
+        <section id="section6" class="portfolio wheelE">
             <div class="wrap">
                 <div class="gap">
                     <div class="container clearfix">
@@ -220,7 +434,7 @@
                 </div>
             </div>
         </section>
-        <section id="section5" class="portfolio wheelE">
+        <section id="section7" class="portfolio wheelE">
             <div class="wrap">
                 <div class="gap">
                     <div class="container clearfix">
@@ -231,7 +445,7 @@
                                     <h3>RESPONSIVE WEBSITE</h3>
                                 </div>
                             </div>
-                            <div class="txt-wrap s356">
+                            <div class="txt-wrap s578">
                                 <div class="txt">
                                     <h2>BRANDO <br> RESTAURANT</h2>
                                     <p>해외 웹 에이전시 홈페이지</p>
@@ -250,7 +464,7 @@
                 </div>
             </div>
         </section>
-        <section id="section6" class="portfolio wheelE">
+        <section id="section8" class="portfolio wheelE">
             <div class="wrap">
                 <div class="gap">
                     <div class="container clearfix">
@@ -261,7 +475,7 @@
                                     <h3>PC WEBSITE</h3>
                                 </div>
                             </div>
-                            <div class="txt-wrap s356">
+                            <div class="txt-wrap s578">
                                 <div class="txt">
                                     <h2>VIVIENNE <br> WESTWOOD</h2>
                                     <p>영국의 패션 브랜드 비비안웨스트우드 <br><br> 공식 온라인 스토어 홈페이지</p>
@@ -280,7 +494,7 @@
                 </div>
             </div>
         </section>
-        <section id="section7" class="portfolio wheelE">
+        <section id="section9" class="portfolio wheelE">
             <div class="wrap">
                 <div class="gap">
                     <div class="container clearfix">
@@ -325,8 +539,8 @@
                                     <div>
                                         <span><a href="http://qr.kakao.com/talk/ihdqi0CHurnnF38HHQ.Lk8e2MCs-" title="KAKAO TALK 보내기" target="_blank"><img src="./img/kakaotalk.png" alt="">niziaki</a></span>
                                         <span><a href="https://line.me/ti/p/LYlYsa2J4-" title="LINE 보내기" target="_blank"><img src="./img/LINE.png" alt="">niziaki</a></span>
-                                        <span><a href="tel:01045838408" title="전화걸기" target="_blank"><i class="fa fa-mobile"></i>010-4583-8408</a></span>
-                                        <span><a href="mailto:nizi_aki@naver.com" title="E-mail 보내기" target="_blank"><i class="fa fa-envelope"></i>nizi_aki@naver.com</a></span>
+                                        <span><a href="tel:01045838408" title="전화걸기" target="_blank"><i class="fas fa-mobile-alt"></i>010-4583-8408</a></span>
+                                        <span><a href="mailto:nizi_aki@naver.com" title="E-mail 보내기" target="_blank"><i class="fas fa-envelope"></i>nizi_aki@naver.com</a></span>
                                     </div>
                                 </div>
                                 <div class="row2">
@@ -343,7 +557,8 @@
     </footer>
 </div>
 
-<script src="./js/portfolio.js"></script>
+<!-- <script src="./js/portfolio.js"></script> -->
+<script src="./js/1portfolio.js"></script>
 
 
 </body>
