--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <div class="content clearfix">
                             <div class="left">
                                 <div class="content-gap">
-                                    <div class="img-wrap"><!-- <img src="./img/portfolio.jpg" alt="my image"> --></div>
+                                    <div class="img-wrap"><img src="./img/portfolio.jpg" alt="my image"></div>
                                     <ul class="pro-wrap">
                                         <li><div><i class="fas fa-birthday-cake"></i><h6>1984.08.26</h6></div></li>
                                         <li><div><i class="fas fa-phone-alt"></i><h6>+82. 10. 4583. 8408</h6></div></li>
@@ -225,10 +225,14 @@
                                             </li>
                                             <li class="up-txt-wrap">
                                                 <span>
-                                                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                                    Consequatur molestias pariatur modi cupiditate.
-                                                    Quibusdam molestiae reiciendis eligendi quisquam debitis odit adipisci deserunt nesciunt ea.
-                                                    Dolorem, consequuntur ullam. Explicabo, corporis non!
+                                                    브랜드를 상징하는 로고가 존재하듯이 나를 상징하는 의미로 제 이름에 들어가는<br>
+                                                    알파벳 'A' , 한글 '아' , 숫자 '0(영)'을 활용하여 로고로 제작해보았습니다.<br>
+                                                    'A' 는 &nbsp;영어에서 첫 글자!&nbsp;&nbsp;스페인어에서는 첫 글자이면서 '아' 라는 발음 사용!<br>
+                                                    '아' 는 일본어(あ)에서 첫 글자!<br>
+                                                    '0' 은&nbsp;&nbsp;숫자에서 1보다 더욱 근본적인 기원, 원점의 개념!<br>
+                                                    제 이름이 뜻하는 것 모두 처음을 상징하는 것과 글자가 겹치는 중간에 포인트로 스마일을 강조한 것처럼<br>
+                                                    어떠한 순간에서도 미소와 처음을 중요시 하여 밝은 웃음과 초심을 잃지 않고<br>
+                                                    항상 배운다는 마음으로 점점 성장하는 웹 퍼블리셔가 되겠습니다.
                                                 </span>
                                             </li>
                                         </ul>
@@ -628,8 +632,7 @@
 
 </div>
 
-<!-- <script src="./js/portfolio.js"></script> -->
-<script src="./js/1portfolio.js"></script>
+<script src="./js/portfolio.js"></script>
 
 
 </body>
