--- a/brando.html
+++ b/brando.html
@@ -35,8 +35,8 @@
     <script src="./js/lib/prefixfree.min.js"></script>
     <script src="./js/lib/jquery.easing.1.3.js"></script>
 
-    <script src="./vue/lib/vue.js"></script>
-    <!-- <script src="./vue/lib/axios.min.js"></script>
+    <!-- <script src="./vue/lib/vue.js"></script>
+    <script src="./vue/lib/axios.min.js"></script>
     <script src="./vue/lib/vue-router.js"></script> -->
 
 
@@ -72,6 +72,10 @@
                     </div>
                 </div>
             </div>
+            <div class="port-wrap">
+                <span class="prev-wrap"><a href="./hcode.html" class="prev-btn">&nbsp;&nbsp;&nbsp;PREV</a></span>
+                <span class="next-wrap"><a href="./vivienne.html" class="next-btn">NEXT&nbsp;&nbsp;&nbsp;</a></span>
+            </div>
         </section>
         <section id="section2">
             <div class="wrap">
@@ -94,7 +98,7 @@
                                 <ul>
                                     <li>
                                         <h4>PROJECT</h4>
-                                        <h5><strong>BRANDO RESTAURANT</strong><br>_RESPONSIVE WEBSITE</h5>
+                                        <h5><strong>BRANDO <br> RESTAURANT</strong><br>_RESPONSIVE WEBSITE</h5>
                                     </li>
                                     <li>
                                         <h4>SKILL</h4>
@@ -115,19 +119,16 @@
                             <div class="right">
                                 <h3>DETAIL</h3>
                                 <p>
-                                    해외 웹 에이전시 홈페이지<br>
-                                    총 9 section으로 나눠진 메인 페이지와 AJAX를 구현하고 JSON 데이터를 바인딩하여 서브 페이지 공지사항 게시판을 제작하였습니다.<br>
-                                    첫 번째 section은 콜백함수를 사용하여 이미지가 순차적으로 나타나는 애니메이션 효과로 구현하였습니다.<br>
-                                    두 번째 section은 왼쪽 공지사항의 텍스트 롤링 상하 슬라이드와 오른쪽 프로모션 버튼으로 숨겨져 있는 슬라이드가 하단에 나타나도록 제작하였습니다.<br>
-                                    세 번째 section은 벤트 좌우 화살버튼, 인디게이터버튼, 터치스와이프, 타이머 카운트 콘트롤 구현 함수 플레이버튼, 일시정지 버튼 이벤트 구현<br>
-                                    네 번째 section은 <br>
-                                    다섯 번째 section은 <br>
-                                    여섯 번째 section은 <br>
-                                    일곱 번째 section은 <br>
-                                    여덟 번째 section은 <br>
-                                    아홉 번째 section은 <br>
-                                    열 번째 section은 <br>
-                                    열한 번째 section은 <br>
+                                    해외 웹 에이전시 레스토랑 소개 홈페이지<br><br>
+                                    <strong>메인 페이지</strong><br>
+                                    &nbsp;&#8211;&nbsp;<strong>총 14 section으로 나눠지고 섹션별 다양한 기능을 넣어 원페이지 형태로 제작</strong><br>
+                                    첫 번째 section은 반응형 슬라이드로 제작하였고, 페이드 인/아웃으로 이미지가 롤링되도록 구현하였습니다.<br>
+                                    두 번째 section부터 다섯 번째 section까지는 Smooth Scrollling Event를 활용하여 부드럽게 다음 섹션으로 이동하도록 구현하였습니다.<br>
+                                    여섯 번째 section부터 여덟 번째 section까지는 마우스 오버시 해당 섹션의 메뉴판이나 셰프 소개가 나타나도록 구현하였습니다.<br>
+                                    아홉 번째 section은 내비게이션 버튼에 따라 갤러리 이미지의 배치가 다르게 구현하였고, 이미지 클릭시 모달창이 열려 큰 이미지를 볼 수 있도록 제작하였습니다.<br>
+                                    열한 번째 section은 마우스 오버시 이미지에 zoom 효과를 주고, 좌측 박스 높이를 이용해서 우측 박스의 높이가 설정되도록 반응형으로 제작하였습니다.<br>
+                                    열세 번째 section은 임의의 다른 4가지 숫자를 동일한 시간 안에 count가 되는 효과를 구현하였습니다.<br>
+                                    열네 번째 section은 이름,메일 등 정보를 입력하여 폼전송을 할 수 있도록 PHP 와 AJAX 그리고 정규표현식을 활용하여 제작하였습니다.<br>
                                 </p>
                             </div>
                         </div>
@@ -215,6 +216,13 @@
         </div>
     </footer>
 
+    <!-- Go Home -->
+    <div class="goHome">
+        <a href="./index.html" class="goHome-btn" title="goHome">
+            <i class="fas fa-home"></i>
+        </a>
+    </div>
+
     <!-- Go Top -->
     <div class="goTop">
         <a href="#intro" class="goTop-btn" title="goTop">
@@ -225,7 +233,6 @@
 </div>
 
 <script src="./js/portfolio.js"></script>
-<!-- <script src="./js/1portfolio.js"></script> -->
 
 
 </body>
