--- a/hcode.html
+++ b/hcode.html
@@ -35,8 +35,8 @@
     <script src="./js/lib/prefixfree.min.js"></script>
     <script src="./js/lib/jquery.easing.1.3.js"></script>
 
-    <script src="./vue/lib/vue.js"></script>
-    <!-- <script src="./vue/lib/axios.min.js"></script>
+    <!-- <script src="./vue/lib/vue.js"></script>
+    <script src="./vue/lib/axios.min.js"></script>
     <script src="./vue/lib/vue-router.js"></script> -->
 
 
@@ -67,10 +67,14 @@
                         <div class="title">
                             <h3>PROJECT</h3>
                             <h6><i class="blind">line</i></h6>
-                            <h2>CENTER LOGO &#8211; H-CODE</h2>
+                            <h2>CENTER LOGO &#8211; <br> H-CODE</h2>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="port-wrap">
+                <span class="prev-wrap"><a href="./jason.html" class="prev-btn">&nbsp;&nbsp;&nbsp;PREV</a></span>
+                <span class="next-wrap"><a href="./brando.html" class="next-btn">NEXT&nbsp;&nbsp;&nbsp;</a></span>
             </div>
         </section>
         <section id="section2">
@@ -94,7 +98,7 @@
                                 <ul>
                                     <li>
                                         <h4>PROJECT</h4>
-                                        <h5><strong>CENTER LOGO &#8211; H-CODE</strong><br>_RESPONSIVE WEBSITE</h5>
+                                        <h5><strong>CENTER LOGO &#8211; <br> H-CODE</strong><br>_RESPONSIVE WEBSITE</h5>
                                     </li>
                                     <li>
                                         <h4>SKILL</h4>
@@ -105,19 +109,19 @@
                                         <h5>2020</h5>
                                     </li>
                                 </ul>
-                                <div class="btn-wrap">
+                                <div class="btn-wrap hMain">
                                     <a href="http://gay486.dothome.co.kr/hcode" title="메인 페이지 바로가기" target="_blank">
                                         <span>MAIN PAGE</span>
                                         <i class="fas fa-angle-right"></i>
                                     </a>
                                 </div>
-                                <div class="btn-wrap">
+                                <div class="btn-wrap hSub1">
                                     <a href="http://gay486.dothome.co.kr/hcode/portfolio.html" title="서브 페이지 바로가기" target="_blank">
                                         <span>SUB PAGE 1</span>
                                         <i class="fas fa-angle-right"></i>
                                     </a>
                                 </div>
-                                <div class="btn-wrap">
+                                <div class="btn-wrap hSub2">
                                     <a href="http://gay486.dothome.co.kr/hcode/contact_us.html" title="서브 페이지 바로가기" target="_blank">
                                         <span>SUB PAGE 2</span>
                                         <i class="fas fa-angle-right"></i>
@@ -127,19 +131,23 @@
                             <div class="right">
                                 <h3>DETAIL</h3>
                                 <p>
-                                    해외 웹 에이전시 홈페이지<br>
-                                    총 11 section으로 나눠진 메인 페이지와 AJAX를 구현하고 JSON 데이터를 바인딩하여 서브 페이지 공지사항 게시판을 제작하였습니다.<br>
-                                    첫 번째 section은 콜백함수를 사용하여 이미지가 순차적으로 나타나는 애니메이션 효과로 구현하였습니다.<br>
-                                    두 번째 section은 왼쪽 공지사항의 텍스트 롤링 상하 슬라이드와 오른쪽 프로모션 버튼으로 숨겨져 있는 슬라이드가 하단에 나타나도록 제작하였습니다.<br>
-                                    세 번째 section은 벤트 좌우 화살버튼, 인디게이터버튼, 터치스와이프, 타이머 카운트 콘트롤 구현 함수 플레이버튼, 일시정지 버튼 이벤트 구현<br>
-                                    네 번째 section은 <br>
-                                    다섯 번째 section은 <br>
-                                    여섯 번째 section은 <br>
-                                    일곱 번째 section은 <br>
-                                    여덟 번째 section은 <br>
-                                    아홉 번째 section은 <br>
-                                    열 번째 section은 <br>
-                                    열한 번째 section은 <br>
+                                    해외 웹 에이전시 소개 홈페이지<br><br>
+                                    <strong>메인 페이지</strong><br>
+                                    &nbsp;&#8211;&nbsp;<strong>총 11 section으로 나눠지고 섹션별 다양한 기능을 넣어 제작</strong><br>
+                                    첫 번째 section은 마우스무브 기능과 각 이미지마다 애니메이션 효과를 구현하여 메인 슬라이드로 제작하였습니다.<br>
+                                    네 번째 section은 내비게이션 버튼에 따라 갤러리 이미지의 배치가 다르도록 구현하였고, 이미지 클릭시 모달창이 열려 큰 이미지를 볼 수 있도록 제작하였으며,<br>
+                                    마우스 오버시 숨겨진 텍스트가 보이고, 이미지 사이즈를 up 시키면서 filter : brightness 를 사용하여 이미지가 어두워지도록 구현하였습니다.<br>
+                                    여섯 번째 section은 좌우 화살버튼, 인디게이터버튼, 터치스와이프로 반응형 슬라이드를 구현하였습니다.<br>
+                                    그 외의 section들은 마우스 오버시 이미지 회전이나 size up 또는 position 과 opacity 효과를 구현하여 숨겨진 이미지나 텍스트가 보이도록 제작하였습니다.<br>
+                                    또한, Parallax 효과를 구현하여 스크롤을 내리면 이미지와 텍스트가 나타나는 애니메이션을 구현하였습니다.<br><br>
+                                    <strong>서브 페이지 1</strong><br>
+                                    &nbsp;&#8211;&nbsp;<strong>갤러리 형식으로 되어 있는 portfolio 서브 페이지 제작</strong><br>
+                                    내비게이션 버튼에 따라 갤러리 이미지의 배치가 다르도록 구현하였고, 이미지 클릭시 모달창이 열려 큰 이미지를 볼 수 있도록 제작하였으며,<br>
+                                    마우스 오버시 filter : brightness 를 사용하여 이미지는 어두워지고, 아래 있던 텍스트는 이미지 위로 올라오도록 구현하였습니다.<br><br>
+                                    <strong>서브 페이지 2</strong><br>
+                                    &nbsp;&#8211;&nbsp;<strong>회사 위치 및 소개하는 contact_us 서브 페이지 제작</strong><br>
+                                    이름,메일 등 정보를 입력하여 폼전송을 할 수 있도록 PHP 와 AJAX 그리고 정규표현식을 활용하여 제작하였습니다.<br>
+                                    공통으로 스크롤을 내리면 스마일 아이콘을 사용한 goTop 버튼이 보여지고, 클릭시 페이지 상단으로 부드럽게 이동하도록 제작하였습니다.
                                 </p>
                             </div>
                         </div>
@@ -271,6 +279,13 @@
         </div>
     </footer>
 
+    <!-- Go Home -->
+    <div class="goHome">
+        <a href="./index.html" class="goHome-btn" title="goHome">
+            <i class="fas fa-home"></i>
+        </a>
+    </div>
+
     <!-- Go Top -->
     <div class="goTop">
         <a href="#intro" class="goTop-btn" title="goTop">
@@ -281,7 +296,6 @@
 </div>
 
 <script src="./js/portfolio.js"></script>
-<!-- <script src="./js/1portfolio.js"></script> -->
 
 
 </body>
