--- a/jason.html
+++ b/jason.html
@@ -35,8 +35,8 @@
     <script src="./js/lib/prefixfree.min.js"></script>
     <script src="./js/lib/jquery.easing.1.3.js"></script>
 
-    <script src="./vue/lib/vue.js"></script>
-    <!-- <script src="./vue/lib/axios.min.js"></script>
+    <!-- <script src="./vue/lib/vue.js"></script>
+    <script src="./vue/lib/axios.min.js"></script>
     <script src="./vue/lib/vue-router.js"></script> -->
 
 
@@ -67,10 +67,14 @@
                         <div class="title">
                             <h3>PROJECT</h3>
                             <h6><i class="blind">line</i></h6>
-                            <h2>JASON TRAVEL SERVICE</h2>
+                            <h2>JASON <br> TRAVEL SERVICE</h2>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="port-wrap">
+                <span class="prev-wrap"><a href="./viccarbe.html" class="prev-btn">&nbsp;&nbsp;&nbsp;PREV</a></span>
+                <span class="next-wrap"><a href="./hcode.html" class="next-btn">NEXT&nbsp;&nbsp;&nbsp;</a></span>
             </div>
         </section>
         <section id="section2">
@@ -94,7 +98,7 @@
                                 <ul>
                                     <li>
                                         <h4>PROJECT</h4>
-                                        <h5><strong>JASON TRAVEL SERVICE</strong><br>_RESPONSIVE WEBSITE</h5>
+                                        <h5><strong>JASON <br> TRAVEL SERVICE</strong><br>_RESPONSIVE WEBSITE</h5>
                                     </li>
                                     <li>
                                         <h4>SKILL</h4>
@@ -105,27 +109,27 @@
                                         <h5>2020</h5>
                                     </li>
                                 </ul>
-                                <div class="btn-wrap">
+                                <div class="btn-wrap jMain">
                                     <a href="http://aych486.dothome.co.kr/jason_self" title="메인 페이지 바로가기" target="_blank">
                                         <span>MAIN PAGE</span>
                                         <i class="fas fa-angle-right"></i>
                                     </a>
                                 </div>
-                                <div class="btn-wrap">
+                                <div class="btn-wrap jSub1">
                                     <a href="http://aych486.dothome.co.kr/jason_self/join.php" title="회원가입 페이지 바로가기" target="_blank">
                                         <span>SUB PAGE 1</span>
                                         <i class="fas fa-angle-right"></i>
                                     </a>
                                 </div>
-                                <div class="btn-wrap">
+                                <div class="btn-wrap jSub2">
                                     <a href="http://aych486.dothome.co.kr/jason_self/login.php" title="로그인 페이지 바로가기" target="_blank">
                                         <span>SUB PAGE 2</span>
                                         <i class="fas fa-angle-right"></i>
                                     </a>
                                 </div>
-                                <div class="btn-wrap">
+                                <div class="btn-wrap jSub3">
                                     <a href="http://aych486.dothome.co.kr/jason_self/main1-1.php" title="서브 페이지 바로가기" target="_blank">
-                                        <span>SUB PAGE 2</span>
+                                        <span>SUB PAGE 3</span>
                                         <i class="fas fa-angle-right"></i>
                                     </a>
                                 </div>
@@ -133,19 +137,20 @@
                             <div class="right">
                                 <h3>DETAIL</h3>
                                 <p>
-                                    단 하나뿐인 나만의 럭셔리 여행,<!--  <br><br> --> "다른 여행"을 추구하는 국내 여행사 홈페이지<br>
-                                    총 11 section으로 나눠진 메인 페이지와 AJAX를 구현하고 JSON 데이터를 바인딩하여 서브 페이지 공지사항 게시판을 제작하였습니다.<br>
-                                    첫 번째 section은 콜백함수를 사용하여 이미지가 순차적으로 나타나는 애니메이션 효과로 구현하였습니다.<br>
-                                    두 번째 section은 왼쪽 공지사항의 텍스트 롤링 상하 슬라이드와 오른쪽 프로모션 버튼으로 숨겨져 있는 슬라이드가 하단에 나타나도록 제작하였습니다.<br>
-                                    세 번째 section은 벤트 좌우 화살버튼, 인디게이터버튼, 터치스와이프, 타이머 카운트 콘트롤 구현 함수 플레이버튼, 일시정지 버튼 이벤트 구현<br>
-                                    네 번째 section은 <br>
-                                    다섯 번째 section은 <br>
-                                    여섯 번째 section은 <br>
-                                    일곱 번째 section은 <br>
-                                    여덟 번째 section은 <br>
-                                    아홉 번째 section은 <br>
-                                    열 번째 section은 <br>
-                                    열한 번째 section은 <br>
+                                    단 하나뿐인 나만의 럭셔리 여행,&nbsp;&nbsp;"다른 여행"을 추구하는 국내 여행사 홈페이지<br><br>
+                                    <strong>메인 페이지</strong><br>
+                                    &nbsp;&#8211;&nbsp;<strong>총 5 section으로 나눠지고 섹션별 다양한 슬라이드와 PHP 기반으로 사이트 제작</strong><br>
+                                    첫 번째 section은 전체를 fixed 로 설정하여 하단으로 스크롤시에도 위치가 항상 고정되도록 구현하였고,<br>
+                                    인디게이터 버튼에 addClass 를 사용하여 각 슬라이드의 타이머 컨트롤에 맞춰 시각적으로 확인할 수 있는 움직이는 바도 구현하였습니다.<br>
+                                    세 번째 section은 페이드 인아웃 반응형 슬라이드로 제작되었고, 인디게이터 버튼을 이미지로 만들어 클릭 시 해당 이미지가 크게 보이도록 구현하였습니다.<br>
+                                    네 번째 section은 마우스 오버 효과와 인디게이터 버튼에 맞춰 이미지 1장씩 움직이도록 제작하였고, 반응형에 맞춰 슬라이드 개수가 변경되도록 구현하였습니다.<br><br>
+                                    <strong>서브 페이지 1 , 2</strong><br>
+                                    &nbsp;&#8211;&nbsp;<strong>AJAX를 구현하고 회원가입(Join), Login 서브 페이지 제작</strong><br>
+                                    회원가입 시 AJAX에게 넘겨 받은 입력된 폼 데이터를 PHP를 통해 서버에 전달하고 MYSQL에 생성한 해당 테이블에 저장하였으며,<br>
+                                    MYSQL에 저장된 데이터베이스의 목록을 PHP로 가져와서 입력된 아이디와 비밀번호의 정보가 일치할 경우, AJAX를 통해 로그인이 되도록 제작하였습니다.<br><br>
+                                    <strong>서브 페이지 3</strong><br>
+                                    &nbsp;&#8211;&nbsp;<strong>여행 테마를 소개하는 서브 페이지 제작</strong><br>
+                                    이미지를 나열하고 반응형에 맞춰 보여지는 이미지의 개수가 변경되도록 구현하였고, 마우스 오버시 이미지 테두리에 색상이 나타나도록 효과를 주었습니다.
                                 </p>
                             </div>
                         </div>
@@ -299,6 +304,13 @@
         </div>
     </footer>
 
+    <!-- Go Home -->
+    <div class="goHome">
+        <a href="./index.html" class="goHome-btn" title="goHome">
+            <i class="fas fa-home"></i>
+        </a>
+    </div>
+
     <!-- Go Top -->
     <div class="goTop">
         <a href="#intro" class="goTop-btn" title="goTop">
@@ -309,7 +321,6 @@
 </div>
 
 <script src="./js/portfolio.js"></script>
-<!-- <script src="./js/1portfolio.js"></script> -->
 
 
 </body>
