--- a/viccarbe.html
+++ b/viccarbe.html
@@ -35,8 +35,8 @@
     <script src="./js/lib/prefixfree.min.js"></script>
     <script src="./js/lib/jquery.easing.1.3.js"></script>
 
-    <script src="./vue/lib/vue.js"></script>
-    <!-- <script src="./vue/lib/axios.min.js"></script>
+    <!-- <script src="./vue/lib/vue.js"></script>
+    <script src="./vue/lib/axios.min.js"></script>
     <script src="./vue/lib/vue-router.js"></script> -->
 
 
@@ -72,6 +72,10 @@
                     </div>
                 </div>
             </div>
+            <div class="port-wrap">
+                <span class="prev-wrap"><a href="./starbucks.html" class="prev-btn">&nbsp;&nbsp;&nbsp;PREV</a></span>
+                <span class="next-wrap"><a href="./jason.html" class="next-btn">NEXT&nbsp;&nbsp;&nbsp;</a></span>
+            </div>
         </section>
         <section id="section2">
             <div class="wrap">
@@ -105,7 +109,7 @@
                                         <h5>2020</h5>
                                     </li>
                                 </ul>
-                                <div class="btn-wrap">
+                                <div class="btn-wrap vMain">
                                     <a href="http://gay486.dothome.co.kr/viccarbe" title="메인 페이지 바로가기" target="_blank">
                                         <span>MAIN PAGE</span>
                                         <i class="fas fa-angle-right"></i>
@@ -121,19 +125,17 @@
                             <div class="right">
                                 <h3>DETAIL</h3>
                                 <p>
-                                    스페인의 지중해 도시 발렌시아에 위치한 <br><br> 현대적인 디자인 가구 브랜드 홈페이지<br>
-                                    총 11 section으로 나눠진 메인 페이지와 AJAX를 구현하고 JSON 데이터를 바인딩하여 서브 페이지 공지사항 게시판을 제작하였습니다.<br>
-                                    첫 번째 section은 콜백함수를 사용하여 이미지가 순차적으로 나타나는 애니메이션 효과로 구현하였습니다.<br>
-                                    두 번째 section은 왼쪽 공지사항의 텍스트 롤링 상하 슬라이드와 오른쪽 프로모션 버튼으로 숨겨져 있는 슬라이드가 하단에 나타나도록 제작하였습니다.<br>
-                                    세 번째 section은 벤트 좌우 화살버튼, 인디게이터버튼, 터치스와이프, 타이머 카운트 콘트롤 구현 함수 플레이버튼, 일시정지 버튼 이벤트 구현<br>
-                                    네 번째 section은 <br>
-                                    다섯 번째 section은 <br>
-                                    여섯 번째 section은 <br>
-                                    일곱 번째 section은 <br>
-                                    여덟 번째 section은 <br>
-                                    아홉 번째 section은 <br>
-                                    열 번째 section은 <br>
-                                    열한 번째 section은 <br>
+                                    스페인의 지중해 도시 발렌시아에 위치한 현대적인 디자인 가구 브랜드 홈페이지<br><br>
+                                    <strong>메인 페이지</strong><br>
+                                    &nbsp;&#8211;&nbsp;<strong>총 11 section으로 나눠지고 섹션별 다양한 기능을 넣어 제작</strong><br>
+                                    첫 번째 section은 인디게이터 버튼에 addClass 를 사용하여 각 슬라이드의 타이머 컨트롤에 맞춰 시각적으로 확인할 수 있는 움직이는 바도 구현하였습니다.<br>
+                                    열 번째 section은 3D입체 회전 슬라이드를 배열메서드로 활용하여 제작하였고, 좌우 화살버튼, 터치스와이프로 이동하도록 구현하였습니다.<br>
+                                    그 외의 section들은 마우스 오버시 이미지 size up 과 position, opacity 효과를 구현하여 숨겨진 텍스트가 보이도록 제작하였습니다.<br>
+                                    또한, Parallax 효과를 구현하여 스크롤을 내리면 이미지와 텍스트가 나타나는 애니메이션을 구현하였습니다.<br><br>
+                                    <strong>서브 페이지</strong><br>
+                                    &nbsp;&#8211;&nbsp;<strong>회전하는 슬라이드를 넣은 designers 서브 페이지 제작</strong><br>
+                                    기존 사이트의 나열 방식과는 다르게 삼각함수와 원주율 각도를 응용하여 원테두리를 회전하는 슬라이드 애니메이션을 제작하였습니다.<br>
+                                    그리고 또 다른 section에는 시각적으로 확인 가능한 인디게이터 버튼을 작은 슬라이드에 맞춰 구현되도록 제작하였습니다.
                                 </p>
                             </div>
                         </div>
@@ -243,6 +245,13 @@
         </div>
     </footer>
 
+    <!-- Go Home -->
+    <div class="goHome">
+        <a href="./index.html" class="goHome-btn" title="goHome">
+            <i class="fas fa-home"></i>
+        </a>
+    </div>
+
     <!-- Go Top -->
     <div class="goTop">
         <a href="#intro" class="goTop-btn" title="goTop">
@@ -253,7 +262,6 @@
 </div>
 
 <script src="./js/portfolio.js"></script>
-<!-- <script src="./js/1portfolio.js"></script> -->
 
 
 </body>
