--- a/vivienne.html
+++ b/vivienne.html
@@ -35,8 +35,8 @@
     <script src="./js/lib/prefixfree.min.js"></script>
     <script src="./js/lib/jquery.easing.1.3.js"></script>
 
-    <script src="./vue/lib/vue.js"></script>
-    <!-- <script src="./vue/lib/axios.min.js"></script>
+    <!-- <script src="./vue/lib/vue.js"></script>
+    <script src="./vue/lib/axios.min.js"></script>
     <script src="./vue/lib/vue-router.js"></script> -->
 
 
@@ -72,6 +72,10 @@
                     </div>
                 </div>
             </div>
+            <div class="port-wrap">
+                <span class="prev-wrap"><a href="./brando.html" class="prev-btn">&nbsp;&nbsp;&nbsp;PREV</a></span>
+                <span class="next-wrap"><a href="./starbucks.html" class="next-btn">NEXT&nbsp;&nbsp;&nbsp;</a></span>
+            </div>
         </section>
         <section id="section2">
             <div class="wrap">
@@ -97,7 +101,7 @@
                                 <ul>
                                     <li>
                                         <h4>PROJECT</h4>
-                                        <h5><strong>VIVIENNE WESTWOOD</strong><br>_PC WEBSITE</h5>
+                                        <h5><strong>VIVIENNE <br> WESTWOOD</strong><br>_PC WEBSITE</h5>
                                     </li>
                                     <li>
                                         <h4>SKILL</h4>
@@ -119,13 +123,14 @@
                                 <h3>DETAIL</h3>
                                 <p>
                                     영국 패션 브랜드 비비안웨스트우드 공식 온라인 스토어 홈페이지<br><br>
-                                    총 6 section으로 나눠진 메인 페이지와 AJAX를 구현하고 JSON 데이터를 바인딩하여 서브 페이지 공지사항 게시판을 제작하였습니다.<br>
-                                    첫 번째 section은 콜백함수를 사용하여 이미지가 순차적으로 나타나는 애니메이션 효과로 구현하였습니다.<br>
-                                    두 번째 section은 왼쪽 공지사항의 텍스트 롤링 상하 슬라이드와 오른쪽 프로모션 버튼으로 숨겨져 있는 슬라이드가 하단에 나타나도록 제작하였습니다.<br>
-                                    세 번째 section은 벤트 좌우 화살버튼, 인디게이터버튼, 터치스와이프, 타이머 카운트 콘트롤 구현 함수 플레이버튼, 일시정지 버튼 이벤트 구현<br>
-                                    네 번째 section은 <br>
-                                    다섯 번째 section은 <br>
-                                    여섯 번째 section은 <br>
+                                    <strong>메인 페이지</strong><br>
+                                    &nbsp;&#8211;&nbsp;<strong>총 6 section으로 나눠지고 Parallax 효과를 많이 넣어 제작</strong><br>
+                                    스크롤을 내리면 헤더 영역 일부분을 올리고 goTop 버튼이 보여지며, 클릭시 페이지 상단으로 부드럽게 이동하도록 제작하였습니다.<br>
+                                    섹션 위치에 따라 헤더의 색상을 변경하고, 고정되어 있는 퀵메뉴의 위치도 중앙으로 바뀌도록 구현하였습니다.<br>
+                                    세 번째 / 여섯 번째 section은 좌우 화살버튼, 인디게이터버튼, 터치스와이프, 플레이/일시정지 버튼으로 타이머 카운트 컨트롤로 구현한 슬라이드 섹션입니다.<br>
+                                    세 번째 section은 슬라이드뿐만 아니라 모달창을 구현하여 이미지 클릭시 큰 이미지로 볼 수 있도록 제작하였습니다.<br>
+                                    네 번째 section은 우측에서 좌측으로 텍스트를 이동하도록 Fade In으로 구현하였습니다.<br>
+                                    다섯 번째 section은 Parallax 효과를 구현하여 스크롤을 내리면 텍스트가 나타나는 애니메이션을 제작하였습니다.<br><br>
                                 </p>
                             </div>
                         </div>
@@ -213,6 +218,13 @@
         </div>
     </footer>
 
+    <!-- Go Home -->
+    <div class="goHome">
+        <a href="./index.html" class="goHome-btn" title="goHome">
+            <i class="fas fa-home"></i>
+        </a>
+    </div>
+
     <!-- Go Top -->
     <div class="goTop">
         <a href="#intro" class="goTop-btn" title="goTop">
@@ -223,7 +235,6 @@
 </div>
 
 <script src="./js/portfolio.js"></script>
-<!-- <script src="./js/1portfolio.js"></script> -->
 
 
 </body>
